[package]
name = "blog"
version = "0.1.0"
authors = ["Ilya Kopeshtianski <lupusanay@gmail.com>"]
edition = "2018"

[dependencies.r2d2]
version = "0.8.3"

[dependencies.r2d2-diesel]
version = "1.0.0"

[dependencies.serde]
version = "1.0.89"
features = ["derive"]

[dependencies.rocket]
version = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]

[dependencies.diesel]
version = "1.4.1"
features = ["postgres"]

[dependencies.dotenv]
version = "0.13.0"

[dependencies.serde_json]
version = "1.0.39"