[package]
name = "blog"
version = "0.1.0"
authors = ["Ilya Kopeshtianski <lupusanay@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
dotenv = "0.13.0"
serde_json = "1.0.39"
jsonwebtoken = "5.0.1"
time = "0.1.42"
argon2rs = "0.2.5"
rand = "0.6.5"
rocket_cors = "0.5.0-beta-1"

[dependencies.serde]
version = "1.0.89"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "serve", "diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.1"
default-features = false
features = ["postgres"]
