[package]
name = "blog"
version = "0.1.0"
authors = ["Ilya Kopeshtianski <lupusanay@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
env_logger = "0.7"
log = "0.4"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
serde = "1.0"
postgres-types = {version = "0.1.1", features = ["with-chrono-0_4"]}
tokio-postgres = "0.5"
deadpool-postgres = "0.5.5"