[package]
name = "image-service"
version = "0.1.0"
authors = ["Ilya Kopeshtianski <lupusanay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^1.0"
actix-multipart = "^0.1"
image = "^0.22"
env_logger = "^0.6"
log = "^0.4"
futures = "^0.1"
serde_json = "^1.0"
reqwest = "^0.9"
mime_guess = "^2.0"