[package]
name = "image-service"
version = "0.1.0"
authors = ["Ilya Kopeshtianski <lupusanay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "<=0.2.0-alpha.3"
actix-web = "<=2.0.0-alpha.4"
actix-http = "<=1.0.0-alpha.4"
actix-multipart = "<=0.2.0-alpha.3"
image = "<=0.23.0-preview.0"
env_logger = "<=0.7"
log = "<=0.4"
serde_json = "<=1.0"
futures = "<=0.3"
serde = "<=1.0"
reqwest = "<=0.10.0-alpha.2"
mime_guess = "<=2.0"