[package]
name = "image-service"
version = "0.1.0"
authors = ["Ilya Kopeshtianski <lupusanay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2"
actix-web = "2.0"
actix-http = "1.0"
actix-multipart = "0.2"
actix-rt = "1.0.0"
image = "0.23"
env_logger = "0.7"
log = "0.4"
serde_json = "1.0"
futures = "0.3"
serde = "1.0"
reqwest = { version = "0.10", features = ["json"] }
mime_guess = "2.0"
bytes = "0.5.4"